Sun Jul  6 13:36:32 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (update_entries): Add comment about GNU patch usage (-b
	option and so on).

Sat Jul  5 04:13:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcscmds.c, cvs.h (RCS_exec_rcsdiff): New function.
	* diff.c (diff_fileproc): Call it.

Thu Jul  3 09:50:07 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): Add comment about how long we should keep the
	deprecated "cvs rlog" alias.

	* server.c (cvs_output): Add comment about whether to fflush.

Wed Jul  2 18:57:29 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (join2): New tests join2-19 and friends test for a
	case that we can't readily get right (see comments).

Tue Jul  1 09:52:09 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (cmd_usage): Say "specify" --help rather than the vague
	"use".
	(opt_usage, cmd_synonyms): Mention --help here too.
	* add.c, admin.c, checkout.c, commit.c, diff.c, edit.c, import.c,
	log.c, login.c, mkmodules.c, patch.c, rcs.c, release.c, remove.c,
	rtag.c, status.c, tag.c, update.c, watch.c: Likewise, for all the
	other help messages.

	* sanity.sh (join2): New tests.

	* repos.c (Name_Repository): Check for errors from fclose.

Fri Jun 27 10:27:48 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* scramble.c, login.c: Reindent.

	* client.c (connect_to_pserver): Check for errors from send().
	If socket() fails, include SOCK_STRERROR (SOCK_ERRNO) in message.

Wed Jun 25 11:21:52 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c: New option --help-options, with much of the text
	from --help.  Fix a few capitalization and punctuation problems.
	Rewrite text for --help to be an intro to all the --help-*
	options.

	* sanity.sh (head): New tests, concerning meaning of HEAD.

Tue Jun 24 10:14:18 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (recv_line): New function.
	(connect_to_pserver): Call it, and rewrite accordingly.  Also